--- a/fe/src/app/components/header/header.component.html
+++ b/fe/src/app/components/header/header.component.html
@@ -1,1 +1,1 @@
-<div [frmdbPageItems]="header.childNodes" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></div>
+<div [frmdb-node-elements]="header.childNodes" [parentnodel]="nodel" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></div>
