--- a/fe/src/app/components/jumbotron/jumbotron.component.html
+++ b/fe/src/app/components/jumbotron/jumbotron.component.html
@@ -1,1 +1,1 @@
-<div [frmdbPageItems]="jumbotron.childNodes" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></div>
+<div [frmdb-node-elements]="jumbotron.childNodes" [parentnodel]="nodel" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></div>
