--- a/fe/src/app/components/card/card.component.html
+++ b/fe/src/app/components/card/card.component.html
@@ -1,21 +1,6 @@
-<!-- <div class="card-header bg-transparent">
-  <div class="row align-items-center">
-    <div class="col">
-      <h6 class="text-uppercase text-muted ls-1 mb-1">card id</h6>
-      <h2 class="h3 mb-0">Card Title</h2>
-    </div>
-  </div>
+<frmdb-image *ngIf="card?.imageNode" [nodel]="card?.imageNode" [formgrp]="formgrp" [fullpath]="getChildPath(card?.imageNode)" [rdonly]="rdonly"></frmdb-image>
+<div class="card-body">
+    <frmdb-form_text *ngIf="card?.titleNode" [nodel]="card?.titleNode" [formgrp]="formgrp" [fullpath]="getChildPath(card?.titleNode)" [rdonly]="rdonly"></frmdb-form_text>
+    <frmdb-form_text *ngIf="card?.subtitleNode" [nodel]="card?.subtitleNode" [formgrp]="formgrp" [fullpath]="getChildPath(card?.subtitleNode)" [rdonly]="rdonly"></frmdb-form_text>
+    <ng-container [frmdb-node-elements]="card.childNodes" [parentnodel]="nodel" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></ng-container>
 </div>
-<div [class.row]="card.horizontal">
-  <div [class.col-md-4]="card.horizontal">
-    <svg class="bd-placeholder-img card-img-top" width="100%" height="180" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice"
-      focusable="false" role="img" aria-label="Placeholder: Image cap">
-      <title>Placeholder</title>
-      <rect width="100%" height="100%" fill="#868e96"></rect><text x="50%" y="50%" fill="#dee2e6" dy=".3em">Image cap</text>
-    </svg>
-  </div>
-  <div class="card-body" [class.col-md-8]="card.horizontal">
-  </div>
-</div>
--->
-<ng-container [frmdbPageItems]="card.childNodes" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></ng-container>
