even if we use CSS variables we need to use SCSS for loops/mixins

--- a/fe/src/app/components/image/image.component.scss
+++ b/fe/src/app/components/image/image.component.scss
@@ -18,12 +18,12 @@
 	right: 0;
 }
 
-:host.fmdb-img-1-1:before{
+:host.img-ratio-1-1:before{
 	padding-top: 100%;
 }
-:host.frmdb-img-ratio-4-3:before{
+:host.img-ratio-4-3:before{
 	padding-top: 75%;
 }
-:host.frmdb-img-ratio-16-9:before{
+:host.img-ratio-16-9:before{
 	padding-top: 56.25%;
 }
