--- a/fe/src/app/components/image/image.component.html
+++ b/fe/src/app/components/image/image.component.html
@@ -1,4 +1,4 @@
-<img class="frmdb-img" width="80px" height="60px" [src]="formgrp?.get(fullpath)?.value" *ngIf="hasControl(fullpath)" >
+<img class="frmdb-img" width="100%" height="100%" [src]="formgrp?.get(fullpath)?.value" *ngIf="hasControl(fullpath)" >
 <svg class="frmdb-img" *ngIf="!hasControl(fullpath)" class="bd-placeholder-img card-img-top" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false"
   role="img" aria-label="Placeholder: Image cap">
   <title>Placeholder</title>
