--- a/fe/src/app/components/media/media.component.html
+++ b/fe/src/app/components/media/media.component.html
@@ -1,6 +1,9 @@
 <frmdb-image *ngIf="media?.imageNode" [nodel]="media?.imageNode" [formgrp]="formgrp" [fullpath]="getChildPath(media?.imageNode)" [rdonly]="rdonly"></frmdb-image>
-<div class="media-body">
+<div class="media-body px-3">
   <frmdb-form_text *ngIf="media?.titleNode" [nodel]="media?.titleNode" [formgrp]="formgrp" [fullpath]="getChildPath(media?.titleNode)" [rdonly]="rdonly"></frmdb-form_text>
   <frmdb-form_text *ngIf="media?.subtitleNode" [nodel]="media?.subtitleNode" [formgrp]="formgrp" [fullpath]="getChildPath(media?.subtitleNode)" [rdonly]="rdonly"></frmdb-form_text>
-  <ng-container [frmdb-node-elements]="media.childNodes" [parentnodel]="nodel" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></ng-container>
+  <frmdb-form_text *ngIf="media?.textNode" [nodel]="media?.textNode" [formgrp]="formgrp" [fullpath]="getChildPath(media?.textNode)" [rdonly]="rdonly"></frmdb-form_text>
+  <frmdb-grid_row [nodel]="nodel" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly">
+      <!-- <ng-container [frmdb-node-elements]="media.childNodes" [parentnodel]="nodel" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></ng-container> -->
+  </frmdb-grid_row>
 </div>
