--- a/fe/src/app/dev-mode-overlay/drop-handle/drop-handle.component.scss
+++ b/fe/src/app/dev-mode-overlay/drop-handle/drop-handle.component.scss
@@ -14,9 +14,15 @@
         left: 0;
         right: 0;
     }
-    &.child-order {
-        flex-basis: 5px;
-        flex-grow: 0;
+    &.add-new-row {
+        position: absolute;
+        right: .5rem;
+        top: 1rem;
+        color: rgb(234,88,72);
+        width: .75rem;
+        height: .4rem;
+        border-radius: 20%;
+        z-index: 999;
     }
 
     .drop-handle {
