--- a/fe/src/app/components/card/card.component.html
+++ b/fe/src/app/components/card/card.component.html
@@ -2,5 +2,6 @@
 <div class="card-body overflow-auto">
     <frmdb-form_text *ngIf="card?.titleNode" [nodel]="card?.titleNode" [formgrp]="formgrp" [fullpath]="getChildPath(card?.titleNode)" [rdonly]="rdonly"></frmdb-form_text>
     <frmdb-form_text *ngIf="card?.subtitleNode" [nodel]="card?.subtitleNode" [formgrp]="formgrp" [fullpath]="getChildPath(card?.subtitleNode)" [rdonly]="rdonly"></frmdb-form_text>
+    <frmdb-form_text *ngIf="card?.textNode" [nodel]="card?.textNode" [formgrp]="formgrp" [fullpath]="getChildPath(card?.textNode)" [rdonly]="rdonly"></frmdb-form_text>
     <ng-container [frmdb-node-elements]="card.childNodes" [parentnodel]="nodel" [formgrp]="formgrp" [fullpath]="fullpath" [rdonly]="rdonly"></ng-container>
 </div>
