--- a/fe/src/app/dev-mode-overlay/context-menu/context-menu.component.scss
+++ b/fe/src/app/dev-mode-overlay/context-menu/context-menu.component.scss
@@ -2,6 +2,8 @@
     position: absolute;
     top: 0;
     right: 0;
+    height: 100%;
+    
     cursor: context-menu;
     .context-menu-button {
         color: rgb(234,88,72);
