--- a/fe/src/app/dev-mode-overlay/context-menu/context-menu.component.html
+++ b/fe/src/app/dev-mode-overlay/context-menu/context-menu.component.html
@@ -1,4 +1,6 @@
-<fa-icon [icon]="icon" [class.expanded]="expanded" class="fa-xs context-menu-button" (click)="toggleContext($event)"></fa-icon>
+<drop-handle [position]="position" [addedToEl]="item" orientation="add-new-row">
+  <fa-icon [icon]="icon" [class.expanded]="expanded" class="fa-xs context-menu-button" (click)="toggleContext($event)"></fa-icon>
+</drop-handle>
 
 <ul class="context-menu" *ngIf="expanded" [style.top.px]="y" [style.left.px]="x">
   <!-- <ng-container *ngIf="availableTypes">
