--- a/fe/src/app/dev-mode-overlay/drop-handle/drop-handle.component.html
+++ b/fe/src/app/dev-mode-overlay/drop-handle/drop-handle.component.html
@@ -1,1 +1,1 @@
-<div class="drop-handle" [class.dragover]="dragOver"></div>
+<div class="drop-handle" [class.dragover]="dragOver"><ng-content></ng-content></div>
