--- a/fe/src/app/components/frmdb-page.component.html
+++ b/fe/src/app/components/frmdb-page.component.html
@@ -1,37 +1,1 @@
-<!-- <frmdb-form_state [stateGraph]="form?.stateGraph" *ngIf="form?.stateGraph"></frmdb-form_state> -->
-<frmdb-grid_layout *ngIf="page" [nodel]="page" [formgrp]="theFormGroup" [fullpath]="''" [rdonly]="rdonly"></frmdb-grid_layout>
-
-<!-- <div class="frmdb-form-status">
-    <span class="frmdb-form-status-text badge-pill" [class.badge-success]="theFormGroup.status == 'VALID'"
-        [class.badge-danger]="theFormGroup.status == 'INVALID'" [class.badge-warning]="theFormGroup.status == 'PENDING'">
-        {{ theFormGroup.status }}
-    </span>
-</div> -->
-
-
-<!-- <div class="container-fluid" [attr.topnavlook]="page?.topNavLook || 'tn_nav'">
-    <div *ngIf="page?.header !== '"frmdb-hd-none"'">
-        <nav [class.p-0]="page?.topNavLook == 'slim'" frmdb-h_nav
-            class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap navbar-expand-md shadow frmdb-fixed-top-0" [brandName]="page?.brandName"></nav>
-    </div>
-    <div class="row frmdb-main-section">
-        <nav *ngIf="page?.sideNavLook !== 'sn_none'" frmdb-v_nav class="col-md-2 d-none d-md-block bg-light sidebar">
-        </nav>
-
-        <main role="main" [class.col-md-10]="page?.sideNavLook !== 'sn_none'" class="col ml-sm-auto px-4">
-            <router-outlet></router-outlet>
-        </main>
-    </div>
-</div>
-
-<footer class="bg-white border-top fixed-bottom pb-1" *ngIf="page?.footerLook !== 'ft_none'">
-    <nav frmdb-v_nav *ngIf="page?.sideNavLook === 'sn_none'" class="nav bg-none">
-    </nav>
-</footer> -->
-<ul class="w-100 fixed-bottom mb-0 frmdb-copy" style="height: 12px; list-style-type: none;">
-    <li style="font-size: 50%; color: lightgrey">
-        Powered by
-        <a href="http://formuladb.io" target="_blank">formuladb.io</a>
-        &copy; 2018 S.C. FORMULA DATABASE S.R.L.
-    </li>
-</ul>
+<ng-container [frmdb-node-elements]="page?.childNodes" [parentnodel]="page" [formgrp]="theFormGroup" [fullpath]="''" [rdonly]="rdonly"></ng-container>
