--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-danger shadow-lg">
+<nav class="navbar fixed-top navbar-expand-md navbar-dark bg-danger shadow-lg">
     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -201,4 +201,3 @@
         </ul>
     </div>
 </nav>
-<frmdb-page-editor *ngIf="page" [page]="page"></frmdb-page-editor>
