--- a/fe/src/app/app.component.html
+++ b/fe/src/app/app.component.html
@@ -2,8 +2,12 @@
 
 <router-outlet></router-outlet>
 
-<img *ngIf="user?.isDeveloper" class="shadow-lg" (click)="toggleDevMode()" id="frmdb-toggle-dev-mode" [class.dev-mode-on]="devMode" width="16" height="16" alt="devMode-toggle"
-    src="assets/formuladb16.png" />
+<a href="javscript:void()" *ngIf="user?.isDeveloper" (click)="toggleDevMode()" [class.dev-mode-on]="devMode" id="frmdb-toggle-dev-mode" >
+    <fa-icon *ngIf="devMode" [icon]="closeDevModeIcon" class="fa-sm" alt="Close Developer Mode"></fa-icon>
+    <img *ngIf="!devMode" class="shadow-lg" width="32" height="32" alt="Open Developer Mode"
+        src="assets/formuladb32.png" />
+</a>
+
 
 <ul class="w-100 fixed-bottom mb-0 frmdb-copy" style="height: 12px; list-style-type: none;">
     <li style="font-size: 50%; color: lightgrey">
