--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar fixed-top navbar-expand-md navbar-dark bg-danger shadow-lg">
+<div class="frmdb-subnav fixed-top"></div>
+<nav class="navbar fixed-top pl-0 navbar-expand-md navbar-dark bg-danger shadow-sm">
     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -8,25 +9,8 @@
     <div class="collapse navbar-collapse flex-wrap" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item dropdown">
-                <a class="nav-link pr-1" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
-                    <fa-icon [icon]="userIcon"></fa-icon> Admin
-                </a>
-                <div class="dropdown-menu" aria-labelledby="userMenu">
-                    <a class="dropdown-item" href="javascript:void(0)">Admin</a>
-                    <a class="dropdown-item" href="javascript:void(0)">User</a>
-                    <a class="dropdown-item" href="javascript:void(0)">Partner</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="javascript:void(0)" (click)="goToAppList()">
-                        <fa-icon title="'Change app' | i18n" [icon]="changeAppIcon" class="fa-sm"></fa-icon>
-                    </a>            
-                </div>
-            </li>
-            <li class="nav-item"><a class="nav-link disabled p-0" href="#" tabindex="-1" aria-disabled="true">/</a></li>
-            <li class="nav-item"><a class="nav-link disabled pl-1" href="#" tabindex="-1" aria-disabled="true">{{appName}}</a></li>
-            <li class="nav-item"><a class="nav-link disabled p-0" href="#" tabindex="-1" aria-disabled="true">/</a></li>
-            <li class="nav-item dropdown">
-                <a class="nav-link" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
-                    Table
+                <a class="nav-link pr-0" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
+                    BookingItem
                 </a>
                 <div class="dropdown-menu" aria-labelledby="userMenu">
                     <a class="dropdown-item" href="javascript:void(0)">Home</a>
@@ -36,8 +20,8 @@
             </li>
             <li class="nav-item"><a class="nav-link disabled p-0" href="#" tabindex="-1" aria-disabled="true">/</a></li>
             <li class="nav-item dropdown">
-                <a class="nav-link" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
-                    property
+                <a class="nav-link pl-0" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
+                    price
                 </a>
                 <div class="dropdown-menu" aria-labelledby="userMenu">
                     <a class="dropdown-item" href="javascript:void(0)">tbd 1</a>
@@ -45,6 +29,22 @@
                     <a class="dropdown-item" href="javascript:void(0)">tbd 3</a>
                 </div>
             </li>
+            <li class="nav-item">
+                <a *ngIf="!(editorOn$ | async)" (click)="clickStartEdit$.next()" class="nav-link pr-1" title="Roles" href="javascript:void(0)" id="userMenu"
+                    data-toggle="dropdown">
+                    <img src="assets/formuladb24.png" />                
+                </a>
+                <a *ngIf="editorOn$ | async" (click)="clickCancelEdits$.next()" class="nav-link pr-1" title="Roles" href="javascript:void(0)" id="userMenu"
+                    data-toggle="dropdown">
+                    <fa-icon *ngIf="editorOn$ | async" [icon]="discardChangesIcon" class="fa-sm" style="color:orange"></fa-icon>
+                </a>
+            </li>
+            <form class="form-inline my-2 my-lg-0" style="position: relative">
+                <frmdb-formula-code-editor></frmdb-formula-code-editor>
+                <fa-icon *ngIf="editorOn$ | async" [icon]="applyChangesIcon" class="fa-sm" (click)="clickSaveEdits$.next()"
+                    style="position: absolute; top: 1em; right: 0"
+                    [style.color]="(formulaEditorService.editorExprHasErrors$ | async) ? 'red' : 'green'"></fa-icon>
+            </form>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item dropdown">
@@ -79,7 +79,7 @@
                 </div>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" title="Choose Theme" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link pr-0" title="Choose Theme" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <!-- <fa-icon [icon]="themeIcon" class="fa-sm"></fa-icon> -->
                     Look
                 </a>
@@ -101,7 +101,7 @@
             </li>
             <li class="nav-item"><a class="nav-link disabled p-0" href="#" tabindex="-1" aria-disabled="true">&</a></li>
             <li class="nav-item dropdown">
-                <a class="nav-link" title="Auto-Layout" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link pl-0" title="Auto-Layout" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <!-- <fa-icon [icon]="layoutIcon" class="fa-sm"></fa-icon> -->
                     Feel
                 </a>
@@ -119,6 +119,25 @@
                             <img class="frmdb-theme" height="90" width="150" [src]="ly.img" (click)="switchLayout(ly.layout)" />
                         </a>
                     </div>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link disabled p-0" href="#" tabindex="-1" aria-disabled="true">
+                        <fa-icon [icon]="codeIcon"></fa-icon>
+                </a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link pr-1" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
+                    <fa-icon [icon]="userIcon"></fa-icon> Admin
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userMenu">
+                    <a class="dropdown-item" href="javascript:void(0)">Admin</a>
+                    <a class="dropdown-item" href="javascript:void(0)">User</a>
+                    <a class="dropdown-item" href="javascript:void(0)">Partner</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="javascript:void(0)" (click)="goToAppList()">
+                        <fa-icon title="'Change app' | i18n" [icon]="changeAppIcon" class="fa-sm"></fa-icon>
+                    </a>            
                 </div>
             </li>
             <!-- <li class="nav-item dropdown">
@@ -174,30 +193,6 @@
                     </a>
                 </div>
             </li> -->
-        </ul>
-        <div class="w-100"></div>
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a *ngIf="!(editorOn$ | async)" (click)="clickStartEdit$.next()" class="nav-link pr-1" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
-                    <fa-icon [icon]="edit2Icon" class="far fa-sm" style="color: rgba(255, 255, 255, 0.5)">
-                    </fa-icon>
-                </a>
-                <a *ngIf="editorOn$ | async" (click)="clickCancelEdits$.next()" class="nav-link pr-1" title="Roles" href="javascript:void(0)" id="userMenu" data-toggle="dropdown">
-                    <fa-icon *ngIf="editorOn$ | async" [icon]="discardChangesIcon" class="fa-sm" style="color:orange"></fa-icon>
-                </a>
-            </li>
-            <form class="form-inline my-2 my-lg-0">
-                <frmdb-formula-code-editor></frmdb-formula-code-editor>
-            </form>
-            <li class="nav-item">
-                <a *ngIf="!(editorOn$ | async)" (click)="clickStartEdit$.next()" class="nav-link pr-1" title="Roles" href="javascript:void(0)" id="userMenu"
-                    data-toggle="dropdown">
-                    <fa-icon [icon]="edit2Icon" class="far fa-sm" style="color: rgba(255, 255, 255, 0.5)">
-                    </fa-icon>
-                </a>
-                <fa-icon *ngIf="editorOn$ | async" [icon]="applyChangesIcon" class="fa-sm" (click)="clickSaveEdits$.next()"
-                    [style.color]="(formulaEditorService.editorExprHasErrors$ | async) ? 'red' : 'green'"></fa-icon>
-            </li>
         </ul>
     </div>
 </nav>
