--- a/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
+++ b/fe/src/app/dev-mode-common/dev-mode-opts/dev-mode-opts.component.scss
@@ -1,9 +1,16 @@
 :host ::ng-deep {
     @import "~bootstrap/scss/bootstrap.scss";
 
+    .frmdb-subnav {
+        width: 100%;
+        height: 200px;
+        box-shadow: 0 5px 10px rgb(234,88,72) !important;
+        background-color: rgb(234,88,72) !important;
+    }
+
     .navbar.fixed-top {
         z-index: 1031;
-        box-shadow: 0 1rem 2rem rgba(234,88,72,.15) !important;
+        // box-shadow: 0 0.25rem 0.5rem rgba(234,88,72,.15) !important;
         background-color: rgb(234,88,72) !important;
     }
 
