--- a/live-dom-editor/src/live-dom-editor.scss
+++ b/live-dom-editor/src/live-dom-editor.scss
@@ -1,16 +1,17 @@
-#iframe-layer {
+$overlay-background-color: #4285f4 !default;
+
+.live-dom-editor {
     overflow: hidden;
     pointer-events: none;
     white-space: nowrap;
-}
 
-#highlight-box
-{
-    position:absolute;
-    border:1px solid $builder-background-color;
-    width:0px;
-    height:0px;
-    top:0px;
-    left:0px;
-    display:none;
+    .overlay {
+        position:absolute;
+        border:1px solid $overlay-background-color;
+        width:0px;
+        height:0px;
+        top:0px;
+        left:0px;
+        display:none;    
+    }
 }
