refactor data-grid inputs

--- a/fe/src/app/app.component.html
+++ b/fe/src/app/app.component.html
@@ -8,6 +8,7 @@
         src="assets/formuladb32.png" />
 </a>
 
+<frmdb-data-grid [dataGrid]="" [highlightColumns]=""></frmdb-data-grid>
 
 <ul class="w-100 fixed-bottom mb-0 frmdb-copy" style="height: 12px; list-style-type: none;">
     <li style="font-size: 50%; color: lightgrey">
