--- a/fe/src/form/form.component.html
+++ b/fe/src/form/form.component.html
@@ -1,3 +1,8 @@
-<form >
-    
+<form>
+    <div class="" data-frmdb-foreach="state.props">
+        <label data-frmdb-attr="for:state.props[].name" class="col-form-label col-3" data-frmdb-value="state.props[].nameI18n"></label>
+        <div class="col-9">
+            <input type="text" class="form-control" data-frmdb-meta-value="dataObj:state.props[].dataObjPath" name="name" data-frmdb-attr-toggle="disabled:state.props[].disabled">
+        </div>
+    </div>
 </form>
