--- a/fe/src/autocomplete/autocomplete.component.html
+++ b/fe/src/autocomplete/autocomplete.component.html
@@ -6,7 +6,7 @@
     onkeydown="this.$cmp.manageSelection()"
 />
 <div class="position-relative">
-    <div class="card frmdb-autocomplete_popup" [class.visible]="popupOpened">
+    <div class="card frmdb-autocomplete_popup" data-frmdb-attr="class.visible:popupOpened">
         <table class="table table-striped table-sm">
             <thead>
                 <tr>
