--- a/fe/src/autocomplete/autocomplete.component.html
+++ b/fe/src/autocomplete/autocomplete.component.html
@@ -1,21 +1,18 @@
-<input data-frmdb-attr="name:attr.property_name" class="form-control" type="text" autocomplete="off"
-    oninput="frmdbAction(event)" onkeydown="frmdbAction(event)"
-/>
 <div class="position-relative">
     <div class="card frmdb-autocomplete_popup" data-frmdb-attr="class.visible:state.popupOpened">
         <table class="table table-striped table-sm">
             <thead>
                 <tr>
-                    <th data-frmdb-foreach="state.relatedControls[]" class="border-top-0">
-                        {{relatedCtrl.refPropertyName | i18n}}
+                    <th data-frmdb-foreach="state.relatedControls[]" data-frmdb-value=":state.relatedControls[].property_name" 
+                        class="border-top-0">
                     </th>
                 </tr>
             </thead>
             <tbody>
-                <tr data-frmdb-foreach="state.options[]" onclick="this.$cmp.selectOption(this)">
+                <tr data-frmdb-foreach="state.options[]" onclick="this.$frmdb.selectOption(event)">
                     <td data-frmdb-foreach="state.options[].relatedControls[]" 
                         data-frmdb-attr="class.selected:state.options[].isSelected"
-                        data-frmdb-value="state.options[].relatedControls[].optionWithHighlight">
+                        data-frmdb-value=":state.options[].relatedControls[].optionWithHighlight">
                     </td>
                 </tr>
             </tbody>
