more updates on templating engine for complec autocomplete component data=binding

--- a/fe/src/autocomplete/autocomplete.component.scss
+++ b/fe/src/autocomplete/autocomplete.component.scss
@@ -18,7 +18,7 @@
     cursor: pointer;
 }
 
-.frmdb-autocomplete-popup td.selected {
+.frmdb-autocomplete-popup tr.selected {
     background-color: lightblue;
 }
 
