--- a/fe/src/autocomplete/autocomplete.component.html
+++ b/fe/src/autocomplete/autocomplete.component.html
@@ -1,18 +1,17 @@
 <div class="position-relative">
-    <div class="card frmdb-autocomplete_popup" data-frmdb-attr="class.visible::state.popupOpened">
+    <div class="card frmdb-autocomplete-popup" data-frmdb-attr="class.visible::popupOpened">
         <table class="table table-striped table-sm">
             <thead>
                 <tr>
-                    <th data-frmdb-foreach="state.relatedControls[]" data-frmdb-value=":state.relatedControls[].property_name" 
+                    <th data-frmdb-foreach="relatedControls[]" data-frmdb-value="::relatedControls[].ref_property_name" 
                         class="border-top-0">
                     </th>
                 </tr>
             </thead>
             <tbody>
-                <tr data-frmdb-foreach="state.options[]">
-                    <td data-frmdb-foreach="state.options[].relatedControls[]" 
-                        data-frmdb-attr="class.selected::state.options[]._isSelected"
-                        data-frmdb-value=":state.options[].relatedControls[].optionWithHighlight">
+                <tr data-frmdb-foreach="options[]" data-frmdb-attr="class.selected::options[]._isSelected">
+                    <td data-frmdb-foreach="relatedControls[]"
+                        data-frmdb-value="html:options[]:relatedControls[].ref_property_name">
                     </td>
                 </tr>
             </tbody>
