--- a/fe/src/v-nav/v-nav.component.html
+++ b/fe/src/v-nav/v-nav.component.html
@@ -1,1 +1,1 @@
-<ul frmdb-v_nav_segment data-frmdb-prop="nav::navigationItemsTree" class="nav flex-column"></ul>
+<frmdb-v-nav-segment data-frmdb-prop="nav::navigationItemsTree" class="nav flex-column"></frmdb-v-nav-segment>
